# IJKPlayer

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  serialport.h
app/src/main/cpp/FFMediaMetadataRetriever/: AndroidLog.h  CMakeLists.txt  Mutex.h  ffmpeg_mediametadataretriever.c  ffmpeg_mediametadataretriever.h  ffmpeg_utils.c  mediametadataretriever.cpp  mediametadataretriever.h  wseemann_media_MediaMetadataRetriever.cpp
app/src/main/cpp/ijkffmpeg/libffmpeg/: config.h
app/src/main/cpp/ijkplayer/: CMakeLists.txt
app/src/main/cpp/ijkplayer/android/: ijkplayer_jni.c
app/src/main/cpp/ijkplayer/ijkavformat/: ijkioandroidio.c  ijkmediadatasource.c
app/src/main/cpp/ijkplayer/ijkavutil/: ijkstl.cpp
app/src/main/cpp/ijkplayer/include/ijkj4a/j4a/class/android/os/: Build.include.j4a  Bundle.include.j4a
app/src/main/cpp/ijkplayer/include/ijkj4a/j4a/class/java/nio/: Buffer.h
app/src/main/cpp/ijkplayer/include/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/: IjkMediaPlayer.h
app/src/main/cpp/ijkplayer/include/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/: IMediaDataSource.h  IMediaDataSource.include.j4a
app/src/main/cpp/ijksdl/: CMakeLists.txt  ijksdl_thread.c
app/src/main/cpp/ijksdl/android/: android_audiotrack.c  android_nativewindow.c  ijksdl_android_jni.c  ijksdl_android_jni.h  ijksdl_codec_android_mediacodec_java.c  ijksdl_codec_android_mediaformat_java.c
app/src/main/cpp/ijksdl/include/ijkj4a/j4a/class/android/media/: MediaCodec.h  MediaFormat.h
app/src/main/cpp/ijksdl/include/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/: IAndroidIO.h
app/src/main/cpp/ijksdl/include/ijkj4a/j4au/class/java/nio/: ByteBuffer.util.h
app/src/main/java/tv/danmaku/ijk/media/example/activities/: FileExplorerActivity.java
app/src/main/java/tv/danmaku/ijk/media/example/fragments/: FileListFragment.java
app/src/main/java/tv/danmaku/ijk/media/example/widget/media/: IjkVideoView.java
app/src/main/res/layout/: fragment_file_list.xml
gen-libs/: build.gradle
gen-libs/src/androidTest/java/com/qiku/genlibs/: ExampleInstrumentedTest.java
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gen-libs/src/main/cpp/ijkj4a/: CMakeLists.txt
gen-libs/src/main/cpp/ijkj4a/j4a/: j4a_allclasses.c  j4a_allclasses.include.h  j4a_base.c
gen-libs/src/main/cpp/ijkj4a/j4a/class/android/media/: PlaybackParams.h
gen-libs/src/main/cpp/ijkj4a/j4a/class/android/os/: Bundle.h
gen-libs/src/main/cpp/ijkj4a/j4a/class/java/nio/: ByteBuffer.h
gen-libs/src/main/cpp/ijkj4a/j4a/class/java/util/: ArrayList.h
gen-libs/src/main/cpp/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/: IjkMediaPlayer.include.j4a
gen-libs/src/main/cpp/ijkj4a/j4a/class/tv/danmaku/ijk/media/player/misc/: IAndroidIO.include.j4a
gen-libs/src/main/cpp/ijkj4a/j4au/class/android/media/: AudioTrack.util.c  AudioTrack.util.h
gen-libs/src/main/cpp/ijkprof/: CMakeLists.txt
gen-libs/src/main/cpp/soundtouch/: CMakeLists.txt  ijksoundtouch_wrap.cpp
gen-libs/src/main/cpp/static_yuv/: CMakeLists.txt
gen-libs/src/main/res/values/: strings.xml
gen-libs/src/test/java/com/qiku/genlibs/: ExampleUnitTest.java
